remove unfinsihed features

--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     </section>
 
     <!-- Video Section -->
-    <section id="promo">
+    <!-- <section id="promo">
       <h2>See Our Space</h2>
       <video width="640" controls>
         <source src="videos/promo.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
-    </section>
+    </section> -->
 
     <!-- Services Section -->
-    <section id="services">
+    <!-- <section id="services">
       <h2>Our Services</h2>
       <ul>
         <li>Swedish Massage</li>
@@ -93,10 +93,10 @@
         <li>Hot Stone Massage</li>
         <li>Sports Massage</li>
       </ul>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
-    <section id="contact">
+    <!-- <section id="contact">
       <h2>Contact Us</h2>
       <form action="https://formspree.io/f/your-form-id" method="POST">
         <label>Name: <input type="text" name="name" required /></label><br />
@@ -112,7 +112,7 @@
         <button type="submit">Send</button>
       </form>
     </section>
-    <div id="footer"></div>
+    <div id="footer"></div> -->
 
     <script>
       fetch("footers.html")
