update the header, include pages for where and contact contact links to a google sheets doc

--- a/headers.html
+++ b/headers.html
@@ -18,10 +18,10 @@
         <li class="nav-item">
           <a href="index.html" class="nav-link active" aria-current="page">Home</a>
         </li>
-        <li class="nav-item"><a href="services.html" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+        <li class="nav-item"><a href="services.html" class="nav-link">services</a></li>
+        <li class="nav-item"><a href="Where.html" class="nav-link">Where are we</a></li>
         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="contact.html" class="nav-link">contact</a></li>
       </ul>
     </div>
   </header>
