--- a/headers.html
+++ b/headers.html
@@ -12,7 +12,9 @@
         <svg class="bi me-2" width="40" height="32" aria-hidden="true">
           <use xlink:href="#bootstrap"></use>
         </svg>
-        <span class="fs-4">Idle Hands</span>
+        <span class="fs-4"><h2 style="text-align: center; font-family: 'San Francisco', cursive; margin: 15px;">
+          idle hands
+        </h2></span>
       </a>
       <ul class="nav nav-pills">
         <li class="nav-item">
