--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relax & Restore Massage</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,6 +23,14 @@
           document.getElementById("header").innerHTML = html;
         });
     </script>
+
+    <div
+      class="alert alert-warning text-center mb-0"
+      role="alert"
+      style="font-weight: bold"
+    >
+      🚧 This site is under construction — content may change frequently! 🚧
+    </div>
     <section class="container my-5">
       <div class="row align-items-center">
         <div class="col-md-6">
@@ -121,8 +131,6 @@
           document.getElementById("footer").innerHTML = html;
         });
     </script>
-
-
 
     <script src="script.js"></script>
   </body>
