add favicon to each page

--- a/headers.html
+++ b/headers.html
@@ -1,9 +1,12 @@
 <link rel="stylesheet" href="style.css" />
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Favicon -->
+
 <body>
   <!-- Header / Hero -->
   <header class="border-bottom mb-4">
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <div class="container d-flex flex-wrap justify-content-center py-3">
       <a
         href="/"
@@ -12,18 +15,36 @@
         <svg class="bi me-2" width="40" height="32" aria-hidden="true">
           <use xlink:href="#bootstrap"></use>
         </svg>
-        <span class="fs-4"><h2 style="text-align: center; font-family: 'San Francisco', cursive; margin: 15px;">
-          idle hands
-        </h2></span>
+        <span class="fs-4"
+          ><h2
+            style="
+              text-align: center;
+              font-family: 'San Francisco', cursive;
+              margin: 15px;
+            "
+          >
+            idle hands
+          </h2></span
+        >
       </a>
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a href="index.html" class="nav-link active" aria-current="page">Home</a>
+          <a href="index.html" class="nav-link active" aria-current="page"
+            >Home</a
+          >
         </li>
-        <li class="nav-item"><a href="services.html" class="nav-link">services</a></li>
-        <li class="nav-item"><a href="Where.html" class="nav-link">Where are we</a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">contact</a></li>
+        <li class="nav-item">
+          <a href="services.html" class="nav-link">services</a>
+        </li>
+        <li class="nav-item">
+          <a href="Where.html" class="nav-link">Where are we</a>
+        </li>
+        <li class="nav-item">
+          <a href="about.html" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link">contact</a>
+        </li>
       </ul>
     </div>
   </header>
