--- a/where.html
+++ b/where.html
@@ -1,1 +1,41 @@
-this is is the where are we page
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>where - Relax & Restore Massage</title>
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style.css" />
+</head>
+  <body>
+    <!-- Header / Hero -->
+    <div id="header"></div>
+
+    <script>
+      fetch("headers.html")
+        .then((response) => response.text())
+        .then((html) => {
+          document.getElementById("header").innerHTML = html;
+        });
+    </script>
+<body>
+    this is the location tab
+</body>
+    </script>
+
+    <div id="footer"></div>
+
+    <script>
+      fetch("footers.html")
+        .then((response) => response.text())
+        .then((html) => {
+          document.getElementById("footer").innerHTML = html;
+        });
+    </script>
+
+</body>
+</html>
