add favicon back to images

--- a/footers.html
+++ b/footers.html
@@ -26,7 +26,7 @@
       <li class="ms-3">
         <a class="text-body-secondary" href="#" aria-label="Instagram">
           <img
-            src="images\instagram.svg"
+            src="images/instagram.svg"
             alt="Instagram"
             width="30"
             height="30"
@@ -37,7 +37,7 @@
       <li class="ms-3">
         <a class="text-body-secondary" href="#" aria-label="Facebook">
           <img
-            src="images\facebook.svg"
+            src="images/facebook.svg"
             alt="Facebook"
             width="30"
             height="30"
@@ -46,8 +46,12 @@
         </a>
       </li>
       <li class="ms-3">
-        <a class="text-body-secondary" href="#" aria-label="Logo">
-          <img src="" alt="logo" width="30" height="30" class="product-img" />
+        <a
+          class="text-body-secondary"
+          href="index.html"
+          aria-label="Logo"
+        >
+          <img src="images/favicon.png" alt="logo" width="30" height="30" class="product-img" />
         </a>
       </li>
     </ul>
