update the js so its all in script.js

--- a/about.html
+++ b/about.html
@@ -15,13 +15,7 @@
   <!-- Header / Hero -->
   <div id="header"></div>
 
-  <script>
-    fetch("headers.html")
-      .then((response) => response.text())
-      .then((html) => {
-        document.getElementById("header").innerHTML = html;
-      });
-  </script>
+  
 
   <section id="about" class="container py-5">
     <div class="row align-items-center">
@@ -44,12 +38,6 @@
 
   <div id="footer"></div>
 
-  <script>
-    fetch("footers.html")
-      .then((response) => response.text())
-      .then((html) => {
-        document.getElementById("footer").innerHTML = html;
-      });
-  </script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
