--- a/footers.html
+++ b/footers.html
@@ -27,7 +27,7 @@
         <a class="text-body-secondary" href="#" aria-label="Instagram">
           <img
             src="images/instagram.svg"
-            alt="Instagram"
+            alt="logo"
             width="30"
             height="30"
             class="product-img"
@@ -46,12 +46,14 @@
         </a>
       </li>
       <li class="ms-3">
-        <a
-          class="text-body-secondary"
-          href="index.html"
-          aria-label="Logo"
-        >
-          <img src="images/favicon.png" alt="logo" width="30" height="30" class="product-img" />
+        <a class="text-body-secondary" href="index.html" aria-label="Logo">
+          <img
+            src="images/favicon.png"
+            alt="logo"
+            width="30"
+            height="30"
+            class="product-img"
+          />
         </a>
       </li>
     </ul>
