--- a/services.html
+++ b/services.html
@@ -15,13 +15,7 @@
     <!-- Header / Hero -->
     <div id="header"></div>
 
-    <script>
-      fetch("headers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("header").innerHTML = html;
-        });
-    </script>
+    
 
     <div class="container py-3">
       <main>
@@ -122,12 +116,6 @@
     <!-- Footer -->
     <div id="footer"></div>
 
-    <script>
-      fetch("footers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("footer").innerHTML = html;
-        });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
