--- a/where.html
+++ b/where.html
@@ -15,27 +15,11 @@
     <!-- Header / Hero -->
     <div id="header"></div>
 
-    <script>
-      fetch("headers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("header").innerHTML = html;
-        });
-    </script>
-<body>
-    this is the location tab
-</body>
-    </script>
 
+    this is the location tab
+    <!-- Footer -->
     <div id="footer"></div>
 
-    <script>
-      fetch("footers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("footer").innerHTML = html;
-        });
-    </script>
-
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
