--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,6 @@
     <!-- Header / Hero -->
     <div id="header"></div>
 
-    <script>
-      fetch("headers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("header").innerHTML = html;
-        });
-    </script>
 
 <div class="container my-5">
   <div class="row justify-content-center">
@@ -82,13 +75,6 @@
 
     <div id="footer"></div>
 
-    <script>
-      fetch("footers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("footer").innerHTML = html;
-        });
-    </script>
-
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
