--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home - Relax & Restore Massage</title>
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="style.css" />
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home - Relax & Restore Massage</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <!-- Header / Hero -->
     <div id="header"></div>
-
-    <script>
-      fetch("headers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("header").innerHTML = html;
-        });
-    </script>
 
     <div
       class="alert alert-warning text-center mb-0"
@@ -121,15 +113,9 @@
         <button type="submit">Send</button>
       </form>
     </section>
-    <div id="footer"></div> -->
+     -->
 
-    <script>
-      fetch("footers.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("footer").innerHTML = html;
-        });
-    </script>
+    <div id="footer"></div>
 
     <script src="script.js"></script>
   </body>
