fix typo in where.html

--- a/headers.html
+++ b/headers.html
@@ -37,7 +37,7 @@
           <a href="services.html" class="nav-link">services</a>
         </li>
         <li class="nav-item">
-          <a href="Where.html" class="nav-link">Where are we</a>
+          <a href="where.html" class="nav-link">Where are we</a>
         </li>
         <li class="nav-item">
           <a href="about.html" class="nav-link">About</a>
