--- a/where.html
+++ b/where.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>where - Relax & Restore Massage</title>
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="style.css" />
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>where - Relax & Restore Massage</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <!-- Header / Hero -->
     <div id="header"></div>
 
+    <div class="container my-5">
+      <h2 class="mb-4 text-center">Where Are We</h2>
 
-    this is the location tab
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center mb-4">
+          <p>
+            <strong>idle hands</strong><br />
+            Tuscany Wharf<br />
+            4A Orsman Rd, London N1 5QJ<br />
+            United Kingdom
+          </p>
+        </div>
+
+        <div class="col-md-8">
+          <!-- Google Maps Embed -->
+          <div class="ratio ratio-16x9">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1273.007719260522!2d-0.07969277694297257!3d51.53647160790381!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761c9624428cb5%3A0x3c86189dddc4933!2sTuscany%20Wharf%2C%204A%20Orsman%20Rd%2C%20London%20N1%205QJ!5e0!3m2!1sen!2suk!4v1766245305724!5m2!1sen!2suk"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Footer -->
     <div id="footer"></div>
 
