redesign website to be single page

--- a/footers.html
+++ b/footers.html
@@ -20,11 +20,11 @@
           <use xlink:href="#bootstrap"></use>
         </svg>
       </a>
-      <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Idle Hands</span>
+      <span class="mb-3 mb-md-0 text-body-secondary">© <span id="year"></span> Idle Hands</span>
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3">
-        <a class="text-body-secondary" href="#" aria-label="Instagram">
+        <a class="text-body-secondary" href="https://www.instagram.com/idlehands_massagetherapy" aria-label="Instagram">
           <img
             src="images/instagram.svg"
             alt="logo"
@@ -35,10 +35,10 @@
         </a>
       </li>
       <li class="ms-3">
-        <a class="text-body-secondary" href="#" aria-label="Facebook">
+        <a class="text-body-secondary" href="https://www.fresha.com/a/idle-hands-massage-therapy-london-4a-orsman-road-bouzsj8o" aria-label="Fresha">
           <img
-            src="images/facebook.svg"
-            alt="Facebook"
+            src="images/Fresha_logo_copy.png"
+            alt="Fresha"
             width="30"
             height="30"
             class="product-img"
@@ -48,7 +48,7 @@
       <li class="ms-3">
         <a class="text-body-secondary" href="index.html" aria-label="Logo">
           <img
-            src="images/favicon.png"
+            src="favicon.png"
             alt="logo"
             width="30"
             height="30"
