--- a/headers.html
+++ b/headers.html
@@ -7,25 +7,53 @@
   <!-- Header / Hero -->
   <header class="border-bottom mb-4">
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <div class="container d-flex flex-wrap justify-content-center py-3">
+    <ul
+      class="nav list-unstyled d-flex flex-column position-fixed top-0 end-0 m-3"
+      style="z-index: 1000"
+    >
+    <li class="mb-3 d-flex align-items-center">
+        <a class="text-body-secondary" href="index.html" aria-label="Logo">
+          <img
+            src="favicon.png"
+            alt="logo"
+            width="50"
+            height="50"
+            class="product-img"
+          />
+        </a>
+        <p class="mb-0 ms-2">Phone Number</p>
+      </li>
+      <li class="mb-3">
+        <a class="text-body-secondary" href="https://www.instagram.com/idlehands_massagetherapy" aria-label="Instagram">
+          <img
+            src="images/instagram.svg"
+            alt="logo"
+            width="50"
+            height="50"
+            class="product-img"
+          />
+        </a>
+      </li>
+      <li class="mb-3">
+        <a class="text-body-secondary" href="https://www.fresha.com/a/idle-hands-massage-therapy-london-4a-orsman-road-bouzsj8o" aria-label="Fresha">
+          <img
+            src="images/Fresha_logo_copy.png"
+            alt="Fresha"
+            width="50"
+            height="50"
+            class="product-img"
+          />
+        </a>
+      </li>
+      
+    </ul>
+
+    <!-- <div class="container d-flex flex-wrap justify-content-center py-3">
       <a
         href="/"
         class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
       >
-        <svg class="bi me-2" width="40" height="32" aria-hidden="true">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-        <span class="fs-4"
-          ><h2
-            style="
-              text-align: center;
-              font-family: 'San Francisco', cursive;
-              margin: 15px;
-            "
-          >
-            idle hands
-          </h2></span
-        >
+        <span class="fs-4"><h1>idle hands</h1></span>
       </a>
       <ul class="nav nav-pills">
         <li class="nav-item">
@@ -54,15 +82,17 @@
   const currentPage = location.pathname.split("/").pop();
 
   // Select all nav links
-  const navLinks = document.querySelectorAll('.nav-link');
+  const navLinks = document.querySelectorAll(".nav-link");
 
-  navLinks.forEach(link => {
+  navLinks.forEach((link) => {
     // Get href file name
-    const linkPage = link.getAttribute('href');
+    const linkPage = link.getAttribute("href");
     if (linkPage === currentPage) {
-      link.classList.add('active');
+      link.classList.add("active");
     } else {
-      link.classList.remove('active');
+      link.classList.remove("active");
     }
   });
-</script>
+</script> -->
+  </header>
+</body>
