--- a/index.html
+++ b/index.html
@@ -22,101 +22,282 @@
     >
       🚧 This site is under construction — content may change frequently! 🚧
     </div>
-    <section class="container my-5">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <p>
-            At Relax & Restore Massage, we focus on helping you unwind, recover,
-            and feel your best. Each session is tailored to your needs, whether
-            you're dealing with stress, muscle tension, or simply need time to
-            relax.
-          </p>
-
-          <p>
-            Treatments are delivered in a calm, welcoming space using
-            professional techniques designed to support both physical and mental
-            wellbeing.
-          </p>
-          <p>
-            <b>
-              The Image below needs the higher quality version as we have some
-              fuzzyness when the image is blown up this size so the original
-              would be ideal</b
-            >
-          </p>
-        </div>
-
-        <div class="col-md-6">
-          <!-- image or empty space for now -->
-        </div>
-      </div>
-    </section>
 
     <section class="container my-5" id="about">
-      <img
-        src="images/Hero2.png"
-        alt="Relaxing massage treatment"
-        class="img-fluid rounded mb-4"
-        style="max-height: 500px"
-      />
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
+          <img
+            src="images/Hero2.png"
+            alt="Relaxing massage treatment"
+            class="img-fluid rounded mb-4"
+            style="max-height: 800px"
+          />
+        </div>
+        <div class="col-md-12" style="padding:50px">
           <p>
-            At <strong>Relax & Restore Massage</strong>, we help clients feel
-            refreshed and restored...
+            <strong>
+              They say idle hands are the devil's play things —we say they're a
+              gateway to something deeper.
+            </strong>
+            At Idle Hands, we practice the old magic: the healing power of human
+            touch, the sacred stillness between breaths, and the quiet
+            unraveling of what weighs you down. Our massage therapy is designed
+            to undo more than just knots— it reminds the body what it means to
+            feel. Whether you're chasing peace, pain relief, or a moment of
+            escape, surrender to the ritual. Let idle hands do their work.
           </p>
         </div>
-        <div class="col-md-6">
+      </div>
+
+      <div class="nav nav-pills justify-content-end">
+        <a href="index.html" class="nav-link active" aria-current="page">
+          book now
+        </a>
+      </div>
+
+      <div class="row align-items-center">
+        <div class="text-center">
           <img
-            src="images/therapy.jpg"
-            class="img-fluid"
-            alt="Massage therapy"
+            src="images/headshot_lynn.PNG"
+            alt="Relax & Restore Massage"
+            class="rounded-circle"
+            style="
+              width: 500px;
+              height: 500px;
+              max-width: 100%;
+              object-fit: cover;
+              aspect-ratio: 1/1;
+            "
           />
         </div>
       </div>
+      <div class="col-md-12" style="padding:50px">
+        <p>
+          Lynn’s background is rooted in movement, collaboration and craft -
+          I’ve spent my career using my hands and working closely with people
+          who do the same. Massage was a natural progression: a slower, more
+          grounded way tos ta connected to the body and how we live in it. I
+          understand the physical demands of modern life - the repetition, the
+          intensity, the need for recovery and care. With _Idle Hands_, I offer
+          massage searching for a moment to transcend. It’s responsive, down to
+          earth body work, designed to meet you where you are and take you by
+          the hand
+        </p>
+      </div>
+      <section class="container my-5" id="instagram-gallery">
+        <div class="row g-3">
+          <!-- g-3 adds spacing between columns -->
+
+          <!-- Row 1 -->
+          <div class="col-md-4">
+            <img
+              src="https://picsum.photos/600/400"
+              alt="Placeholder"
+              class="img-fluid"
+              style="width: 100%; height: 400px; object-fit: cover"
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="https://picsum.photos/600/400"
+              alt="Placeholder"
+              class="img-fluid"
+              style="width: 100%; height: 400px; object-fit: cover"
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="https://picsum.photos/600/400"
+              alt="Placeholder"
+              class="img-fluid"
+              style="width: 100%; height: 400px; object-fit: cover"
+            />
+          </div>
+
+          <!-- Row 2 -->
+          <div class="col-md-4">
+            <img
+              src="https://picsum.photos/600/400"
+              alt="Placeholder"
+              class="img-fluid"
+              style="width: 100%; height: 400px; object-fit: cover"
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="https://picsum.photos/600/400"
+              alt="Placeholder"
+              class="img-fluid"
+              style="width: 100%; height: 400px; object-fit: cover"
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              src="https://picsum.photos/600/400"
+              alt="Placeholder"
+              class="img-fluid"
+              style="width: 100%; height: 400px; object-fit: cover"
+            />
+          </div>
+        </div>
+      </section>
+      <div class="col-md-12" style="padding:50px">
+        <p>
+          Text 3: I haven’t written yet but something about Venue, working from
+          PranaVoice beautiful space in Haggerston, length of walk from tube etc
+          and home visits in Clapton
+        </p>
+      </div>
+
+      <div class="nav nav-pills justify-content-center">
+        <a
+          href="index.html"
+          class="nav-link active"
+          aria-current="page"
+          style="font-size: 2rem; padding: 1rem 3rem"
+        >
+          book now
+        </a>
+      </div>
+
+      <div class="container my-5">
+        <h2 class="mb-4 text-center">Where Are We</h2>
+
+        <div class="row justify-content-center">
+          <div class="col-md-6 text-center mb-4">
+            <p>
+              <strong>idle hands</strong><br />
+              Tuscany Wharf<br />
+              4A Orsman Rd, London N1 5QJ<br />
+              United Kingdom
+            </p>
+            <!-- Google Maps Embed - Location 1 -->
+            <div class="ratio ratio-16x9">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1273.007719260522!2d-0.07969277694297257!3d51.53647160790381!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761c9624428cb5%3A0x3c86189dddc4933!2sTuscany%20Wharf%2C%204A%20Orsman%20Rd%2C%20London%20N1%205QJ!5e0!3m2!1sen!2suk!4v1766245305724!5m2!1sen!2suk"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+
+          <div class="col-md-6 text-center mb-4">
+            <p>
+              <strong>Location 2 Name</strong><br />
+              Address Line 1<br />
+              Address Line 2<br />
+              Country
+            </p>
+            <!-- Google Maps Embed - Location 2 -->
+            <div class="ratio ratio-16x9">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19835.084267809158!2d-0.072862692990795!3d51.55617778087836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761c5bd6e201d9%3A0x702506eb7021ac7b!2sClapton%2C%20London!5e0!3m2!1sen!2suk!4v1767968403239!5m2!1sen!2suk"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container my-5">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <h2 class="mb-4 text-center">Contact Us</h2>
+            <form id="contactForm" class="card p-4 shadow-sm rounded">
+              <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  name="name"
+                  placeholder="Your Name"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  placeholder="you@example.com"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea
+                  class="form-control"
+                  id="message"
+                  name="message"
+                  rows="4"
+                  placeholder="Write your message..."
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-custom w-100">
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
+    <!-- Bootstrap JS (optional for components like modals) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Video Section -->
-    <!-- <section id="promo">
-      <h2>See Our Space</h2>
-      <video width="640" controls>
-        <source src="videos/promo.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </section> -->
+    <script>
+      const form = document.getElementById("contactForm");
+      const SCRIPT_URL =
+        "https://script.google.com/macros/s/AKfycbyu-_J32Eou7mJBQNtVNyFG_xP8cQy_uEmQ0erIN8ds1mHAZaZgGraP8OmfZMczToUmBw/exec";
 
-    <!-- Services Section -->
-    <!-- <section id="services">
-      <h2>Our Services</h2>
-      <ul>
-        <li>Swedish Massage</li>
-        <li>Deep Tissue Massage</li>
-        <li>Hot Stone Massage</li>
-        <li>Sports Massage</li>
-      </ul>
-    </section> -->
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
 
-    <!-- Contact Section -->
-    <!-- <section id="contact">
-      <h2>Contact Us</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
-        <label>Name: <input type="text" name="name" required /></label><br />
-        <label>Email: <input type="email" name="_replyto" required /></label
-        ><br />
-        <label
-          >Message:<br /><textarea
-            name="message"
-            rows="4"
-            required
-          ></textarea></label
-        ><br />
-        <button type="submit">Send</button>
-      </form>
-    </section>
-     -->
+        const formData = new FormData(form);
+
+        const name = formData.get("name");
+        const email = formData.get("email");
+        const message = formData.get("message");
+
+        try {
+          // Construct URL with proper encoding
+          const url = `${SCRIPT_URL}?name=${encodeURIComponent(
+            name
+          )}&email=${encodeURIComponent(email)}&message=${encodeURIComponent(
+            message
+          )}`;
+
+          await fetch(url, {
+            method: "GET",
+            redirect: "follow",
+          });
+
+          alert("Submitted!");
+          form.reset();
+        } catch (error) {
+          alert(
+            "Submission successful (CORS limitation prevents confirmation)"
+          );
+          form.reset();
+        }
+      });
+    </script>
 
     <div id="footer"></div>
 
     <script src="script.js"></script>
   </body>
 </html>
+
+
