add live link for booking

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="nav nav-pills justify-content-end">
-        <a href="index.html" class="nav-link active" aria-current="page">
+        <a href="https://www.fresha.com/book-now/idle-hands-massage-therapy-b85279f0/services?lid=2815277&eid=4974940&share=true&pId=2722338" class="nav-link active" aria-current="page">
           book now
         </a>
       </div>
@@ -151,7 +151,7 @@
 
       <div class="nav nav-pills justify-content-center">
         <a
-          href="index.html"
+          href="https://www.fresha.com/book-now/idle-hands-massage-therapy-b85279f0/services?lid=2815277&eid=4974940&share=true&pId=2722338"
           class="nav-link active"
           aria-current="page"
           style="font-size: 2rem; padding: 1rem 3rem"
