update text body 3

--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
       </section>
       <div class="col-md-12" style="padding: 50px">
         <p>
-          Text 3: I haven’t written yet but something about Venue, working from
-          PranaVoice beautiful space in Haggerston, length of walk from tube etc
-          and home visits in Clapton
+          We offer a flexible mobile service across East London, bringing our
+          treatments to the comfort of your home in Clapton and surrounding
+          areas. Alternatively, you’re welcome to visit us at PranaVoice, our
+          beautiful space in Haggerston, just a short walk from the tube. This
+          way, you can enjoy our services wherever is most convenient for you.
         </p>
       </div>
 
@@ -194,10 +196,10 @@
 
           <div class="col-md-6 text-center mb-4">
             <p>
-              <strong>Location 2 Name</strong><br />
-              Address Line 1<br />
-              Address Line 2<br />
-              Country
+              <strong>mobile service</strong><br />
+              Clapton
+              <br />
+              London<br />
             </p>
             <!-- Google Maps Embed - Location 2 -->
             <div class="ratio ratio-16x9">
@@ -310,7 +312,7 @@
           form.reset();
         }
       });
-      // $ python -m http.server 5000
+      // python -m http.server 5000
       // use this code to launch local server
       // site will be http://localhost:5000/#
     </script>
