add mob pop out for number move new hero image to top of screen

--- a/headers.html
+++ b/headers.html
@@ -7,35 +7,39 @@
   <!-- Header / Hero -->
   <header class="border-bottom mb-4">
     <link rel="icon" type="image/png" href="/favicon.png" />
+
     <ul
       class="nav list-unstyled d-flex flex-column position-fixed top-0 end-0 m-3"
       style="z-index: 1000"
     >
-    <li class="mb-3 d-flex align-items-center">
-        <a class="text-body-secondary" href="index.html" aria-label="Logo">
-          <img
-            src="favicon.png"
-            alt="logo"
-            width="50"
-            height="50"
-            class="product-img"
-          />
-        </a>
-        <p class="mb-0 ms-2">Phone Number</p>
-      </li>
+      <li class="mb-3 d-flex align-items-center position-relative">
+  <button id="togglePhone" class="btn p-0 border-0 bg-transparent">
+    <img
+      src="favicon.png"
+      alt="logo"
+      width="50"
+      height="50"
+      class="product-img"
+    />
+  </button>
+
+  <div id="phonePanel" class="phone-panel">
+    Phone Number
+  </div>
+</li>
       <li class="mb-3">
         <a class="text-body-secondary" href="https://www.instagram.com/idlehands_massagetherapy" aria-label="Instagram">
           <img
             src="images/instagram.svg"
-            alt="logo"
+            alt="Instagram"
             width="50"
             height="50"
             class="product-img"
           />
         </a>
       </li>
-      <li class="mb-3">
-        <a class="text-body-secondary" href="https://www.fresha.com/a/idle-hands-massage-therapy-london-4a-orsman-road-bouzsj8o" aria-label="Fresha">
+      <li class="mb-3 book-link">
+        <a class="text-body-secondary" href="#" aria-label="Fresha">
           <img
             src="images/Fresha_logo_copy.png"
             alt="Fresha"
@@ -45,8 +49,12 @@
           />
         </a>
       </li>
-      
     </ul>
+  </header>
+
+
+</body>
+
 
     <!-- <div class="container d-flex flex-wrap justify-content-center py-3">
       <a
