--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home - Relax & Restore Massage</title>
+    <title>idle hands massage therapy</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -63,7 +63,7 @@
           href="#"
           class="nav-link active book-link"
           aria-current="page"
-          style="font-size: 2rem; padding: 1rem 3rem; margin: 50px;"
+          style="font-size: 2rem; padding: 1rem 3rem; margin: 50px"
         >
           book now
         </a>
@@ -77,7 +77,6 @@
             class="rounded-circle"
             style="
               width: 500px;
-              height: 500px;
               max-width: 100%;
               object-fit: cover;
               aspect-ratio: 1/1;
@@ -171,7 +170,7 @@
           href="#"
           class="nav-link active book-link"
           aria-current="page"
-          style="font-size: 2rem; padding: 1rem 3rem; margin: auto;"
+          style="font-size: 2rem; padding: 1rem 3rem; margin: auto"
         >
           book now
         </a>
@@ -273,11 +272,7 @@
     <!-- Bootstrap JS (optional for components like modals) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-      
-
-
-    </script>
+    <script></script>
 
     <div id="footer"></div>
 
