--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <div>
       <img
-        src="images/hero_3.jpg"
+        src="images/idle_hands_hero_2.png"
         alt="Relaxing massage treatment"
         class="img-fluid rounded mb-4"
         style="width: 100%; max-height: 800px; object-fit: cover"
