add correct font and add background colour from font

--- a/footers.html
+++ b/footers.html
@@ -3,7 +3,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
   .simple-bg-footer {
-    background-color: #d4d4d4; /* Light gray - change this to any color you want */
+    background-color: #EBF1FF; /* Light gray - change this to any color you want */
   }
 </style>
 <footer class="simple-bg-footer py-3 border-top" style="margin-top: 33px">
