--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="text-center">
           <img
             src="images/Lynn_hero_2.jpeg"
-            alt="Relax & Restore Massage"
+            alt="Lynn profile picture"
             class="rounded-circle"
             style="
               width: 500px;
@@ -86,15 +86,15 @@
       </div>
       <div class="col-md-12" style="padding: 50px">
         <p>
-          Lynn’s background is rooted in movement, collaboration and craft -
-          I’ve spent my career using my hands and working closely with people
-          who do the same. Massage was a natural progression: a slower, more
-          grounded way tos ta connected to the body and how we live in it. I
-          understand the physical demands of modern life - the repetition, the
-          intensity, the need for recovery and care. With _Idle Hands_, I offer
-          massage searching for a moment to transcend. It’s responsive, down to
-          earth body work, designed to meet you where you are and take you by
-          the hand
+          <b>Hi, im Lynn. </b>My background is rooted in movement, collaboration
+          and craft - I’ve spent my career using my hands and working closely
+          with people who do the same. Massage was a natural progression: a
+          slower, more grounded way tos ta connected to the body and how we live
+          in it. I understand the physical demands of modern life - the
+          repetition, the intensity, the need for recovery and care. With _Idle
+          Hands_, I offer massage searching for a moment to transcend. It’s
+          responsive, down to earth body work, designed to meet you where you
+          are and take you by the hand
         </p>
       </div>
       <section class="container my-5" id="instagram-gallery">
@@ -104,24 +104,24 @@
           <!-- Row 1 -->
           <div class="col-md-4">
             <img
-              src="https://picsum.photos/600/400"
-              alt="Placeholder"
+              src="images\image_1.JPG"
+              alt="massage table inside venue"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
             />
           </div>
           <div class="col-md-4">
             <img
-              src="https://picsum.photos/600/400"
-              alt="Placeholder"
+              src="images\image_2.JPG"
+              alt="yoga space inside venue"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
             />
           </div>
           <div class="col-md-4">
             <img
-              src="https://picsum.photos/600/400"
-              alt="Placeholder"
+              src="images\image_3.JPG"
+              alt="venue front door with signage"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
             />
@@ -130,24 +130,24 @@
           <!-- Row 2 -->
           <div class="col-md-4">
             <img
-              src="https://picsum.photos/600/400"
-              alt="Placeholder"
+              src="images\image_4.JPG"
+              alt="mobile massage table set up in living room"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
             />
           </div>
           <div class="col-md-4">
             <img
-              src="https://picsum.photos/600/400"
-              alt="Placeholder"
+              src="images\image_5.JPG"
+              alt="massage table set up in narrow boat"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
             />
           </div>
           <div class="col-md-4">
             <img
-              src="https://picsum.photos/600/400"
-              alt="Placeholder"
+              src="images\image_6.JPG"
+              alt="mobile massage table set up at night"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
             />
@@ -156,11 +156,11 @@
       </section>
       <div class="col-md-12" style="padding: 50px">
         <p>
-          We offer a flexible mobile service across East London, bringing our
-          treatments to the comfort of your home in Clapton and surrounding
-          areas. Alternatively, you’re welcome to visit us at PranaVoice, our
-          beautiful space in Haggerston, just a short walk from the tube. This
-          way, you can enjoy our services wherever is most convenient for you.
+          Visit at Prana Voice, our beautiful space in Haggerston. Located just
+          a five minute walk from Haggerston station. Alternatively we offer a
+          flexible mobile service across East London, bringing treatments to the
+          comfort of your own home. This way, you can enjoy our services
+          wherever is most convenient for you.
         </p>
       </div>
 
@@ -182,10 +182,10 @@
         <div class="row justify-content-center">
           <div class="col-md-6 text-center mb-4">
             <p>
-              <strong>idle hands</strong><br />
+              <strong>Massage Studio</strong><br />
               Tuscany Wharf<br />
-              4A Orsman Rd, London N1 5QJ<br />
-              United Kingdom
+              4A Orsman Rd, London N1 5QJ <br />
+              
             </p>
             <!-- Google Maps Embed - Location 1 -->
             <div class="ratio ratio-16x9">
@@ -203,10 +203,9 @@
 
           <div class="col-md-6 text-center mb-4">
             <p>
-              <strong>idle hands</strong><br />
-              Tuscany Wharf<br />
-              4A Orsman Rd, London N1 5QJ<br />
-              United Kingdom
+              <strong>Mobile Massage</strong><br />
+              Avaliable in<br />
+              Haggerston & Clapton<br />
             </p>
             <!-- Google Maps Embed - Location 2 -->
             <div class="ratio ratio-16x9">
