swap image order and add full stop

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           repetition, the intensity, the need for recovery and care. With _Idle
           Hands_, I offer massage searching for a moment to transcend. It’s
           responsive, down to earth body work, designed to meet you where you
-          are and take you by the hand
+          are and take you by the hand.
         </p>
       </div>
       <section class="container my-5" id="instagram-gallery">
@@ -104,7 +104,7 @@
           <!-- Row 1 -->
           <div class="col-md-4">
             <img
-              src="images\image_1.JPG"
+              src="images\image_3.JPG"
               alt="massage table inside venue"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
@@ -120,7 +120,7 @@
           </div>
           <div class="col-md-4">
             <img
-              src="images\image_3.JPG"
+              src="images\image_1.JPG"
               alt="venue front door with signage"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
