remove construction banner

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <!-- Header / Hero -->
     <div id="header"></div>
 
-    <div
+    <!-- <div
       class="alert alert-warning text-center mb-0"
       role="alert"
       style="font-weight: bold"
     >
       🚧 This site is under construction — content may change frequently! 🚧
-    </div>
+    </div> -->
 
     <section class="container my-5" id="about">
       <div class="row">
