--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <b>Hi, im Lynn. </b>My background is rooted in movement, collaboration
           and craft - I’ve spent my career using my hands and working closely
           with people who do the same. Massage was a natural progression: a
-          slower, more grounded way tos ta connected to the body and how we live
+          slower, more grounded way to stay connected to the body and how we live
           in it. I understand the physical demands of modern life - the
           repetition, the intensity, the need for recovery and care. With _Idle
           Hands_, I offer massage searching for a moment to transcend. It’s
