--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
       <div class="col-md-12" style="padding: 50px">
         <p>
-          <b>Hi, im Lynn. </b>My background is rooted in movement, collaboration
+          <b>Hi, i’m Lynn. </b>My background is rooted in movement, collaboration
           and craft - I’ve spent my career using my hands and working closely
           with people who do the same. Massage was a natural progression: a
           slower, more grounded way to stay connected to the body and how we live
