update footer link to same location as other links

--- a/footers.html
+++ b/footers.html
@@ -35,7 +35,7 @@
         </a>
       </li>
       <li class="ms-3">
-        <a class="text-body-secondary" href="https://www.fresha.com/a/idle-hands-massage-therapy-london-4a-orsman-road-bouzsj8o" aria-label="Fresha">
+        <a class="text-body-secondary" href="https://www.fresha.com/book-now/idle-hands-massage-therapy-b85279f0/all-offer?share=true&pId=2722338" aria-label="Fresha">
           <img
             src="images/Fresha_logo_copy.png"
             alt="Fresha"
