--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           with people who do the same. Massage was a natural progression: a
           slower, more grounded way to stay connected to the body and how we live
           in it. I understand the physical demands of modern life - the
-          repetition, the intensity, the need for recovery and care. With _Idle
-          Hands_, I offer massage searching for a moment to transcend. It’s
+          repetition, the intensity, the need for recovery and care. With idle
+          hands, I offer massage searching for a moment to transcend. It’s
           responsive, down to earth body work, designed to meet you where you
           are and take you by the hand.
         </p>
@@ -104,7 +104,7 @@
           <!-- Row 1 -->
           <div class="col-md-4">
             <img
-              src="images\image_3.JPG"
+              src="images\image_1.JPG"
               alt="massage table inside venue"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
@@ -120,7 +120,7 @@
           </div>
           <div class="col-md-4">
             <img
-              src="images\image_1.JPG"
+              src="images\image_3.JPG"
               alt="venue front door with signage"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
@@ -130,7 +130,7 @@
           <!-- Row 2 -->
           <div class="col-md-4">
             <img
-              src="images\image_4.JPG"
+              src="images\image_6.JPG"
               alt="mobile massage table set up in living room"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
@@ -146,7 +146,7 @@
           </div>
           <div class="col-md-4">
             <img
-              src="images\image_6.JPG"
+              src="images\image_4.JPG"
               alt="mobile massage table set up at night"
               class="img-fluid"
               style="width: 100%; height: 400px; object-fit: cover"
