--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       content="https://idlehandsmassagetherapy.co.uk/images/idle_hands1200x630px.png"
     />
     <title>idle hands massage therapy</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png">
+
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
