update instagram link

--- a/headers.html
+++ b/headers.html
@@ -31,7 +31,7 @@
     <li>
       <a
         class="text-body-secondary"
-        href="https://www.instagram.com/idlehands_massagetherapy"
+        href="https://www.instagram.com/idlehands_massage"
         aria-label="Instagram"
       >
         <img
