--- a/footers.html
+++ b/footers.html
@@ -24,7 +24,7 @@
     </div>
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3">
-        <a class="text-body-secondary" href="https://www.instagram.com/idlehands_massagetherapy" aria-label="Instagram">
+        <a class="text-body-secondary" href="https://www.instagram.com/idlehands_massage" aria-label="Instagram">
           <img
             src="images/instagram.svg"
             alt="logo"
