--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,8 +20,7 @@
       content="https://idlehandsmassagetherapy.co.uk/images/idle_hands_1200x630px.png"
     />
     <title>idle hands massage therapy</title>
-    <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png">
-
+    <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -60,6 +59,18 @@
             style="max-height: 800px"
           />
         </div> -->
+        <div class="nav nav-pills justify-content-center">
+          <a
+            id="book-link"
+            href="#"
+            class="nav-link active book-link"
+            aria-current="page"
+            style="font-size: 2rem; padding: 1rem 3rem; margin: 50px"
+          >
+            book now
+          </a>
+        </div>
+
         <div class="col-md-12" style="padding: 50px">
           <p>
             <strong>
@@ -74,18 +85,6 @@
             escape, surrender to the ritual. Let idle hands do their work.
           </p>
         </div>
-      </div>
-
-      <div class="nav nav-pills justify-content-center">
-        <a
-          id="book-link"
-          href="#"
-          class="nav-link active book-link"
-          aria-current="page"
-          style="font-size: 2rem; padding: 1rem 3rem; margin: 50px"
-        >
-          book now
-        </a>
       </div>
 
       <div class="row align-items-center">
