update share image to below 300kb

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     />
     <meta
       property="og:image"
-      content="https://idlehandsmassagetherapy.co.uk/images/idle_hands_1200x630px.png"
+      content="https://idlehandsmassagetherapy.co.uk/images/idle_hands_1200x630px(2).png"
     />
     <meta property="og:url" content="https://idlehandsmassagetherapy.co.uk" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="https://idlehandsmassagetherapy.co.uk/images/idle_hands_1200x630px.png"
+      content="https://idlehandsmassagetherapy.co.uk/images/idle_hands_1200x630px(2).png"
     />
     <title>idle hands massage therapy</title>
     <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png" />
