update contact from to include phone number

--- a/index.html
+++ b/index.html
@@ -41,24 +41,11 @@
     <!-- Header / Hero -->
     <div id="header"></div>
 
-    <!-- <div
-      class="alert alert-warning text-center mb-0"
-      role="alert"
-      style="font-weight: bold"
-    >
-      🚧 This site is under construction — content may change frequently! 🚧
-    </div> -->
+
 
     <section class="container my-5" id="about">
       <div class="row">
-        <!-- <div class="col-md-12 text-center">
-          <img
-            src="images/hero_3.jpg"
-            alt="Relaxing massage treatment"
-            class="img-fluid rounded mb-4"
-            style="max-height: 800px"
-          />
-        </div> -->
+
         <div class="nav nav-pills justify-content-center">
           <a
             id="book-link"
@@ -264,6 +251,17 @@
                   id="name"
                   name="name"
                   placeholder="Your Name"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="phone"
+                  name="phone"
+                  placeholder="07700 900000"
                   required
                 />
               </div>
