add regex and if blocks to stop submission if details are missing

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                   name="phone"
                   placeholder="07700 900000"
                   required
+                  pattern="^[0-9+\s]{10,15}$"
                 />
               </div>
               <div class="mb-3">
